@@ -26,4 +26,4 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #define ZOMBONO_VERSION_MAJOR 0
 #define ZOMBONO_VERSION_MINOR 0
 #define ZOMBONO_VERSION_REVISION 10
-#define ZOMBONO_VERSION_BUILD 483
+#define ZOMBONO_VERSION_BUILD 485
