@@ -3,7 +3,14 @@ Release Notes:
 
 Version 0.0.10
 June XX, 2024
+
 NEW FEATURES:
+
+* Added the ability to independently disable the keyboard and mouse using the cls.disable_keyboard and cls.disable_mouse properties (overridden by cls.disable_input)
+* Various map fixes
+	* Fixed a misaligned light switch on z_tdm_subway
+	* Fixed one of the roofs of the bases on z_tdm_subway being 8 units off
+	* Added a clip brush to some of the stairs on z_tdm_labrats
 
 BUG FIXES:
 
